# llm-web-agent

./: Cargo.toml  Dockerfile  Dockerfile.mistral  LOAD_TESTING.md  Makefile  README.md  docker-compose.yml  drill-config.yml  drill-heavy.yml  drill-light.yml  drill-simple-session.yml  drill-workflow.yml  env.example
examples/: README.md  curl_examples.md  demo_product_extraction.sh  simple_demo.sh
scripts/: init-models.sh
src/: browser.rs  lib.rs  llama_client.rs  main.rs  mcp.rs  mcp_server.rs  types.rs
tests/: integration_tests.rs  unit_tests.rs
tests/common/: mod.rs
tests/integration/: browser.rs  product_extraction.rs
tests/integration/common/: mod.rs
