[package]
name = "llm-web-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web server framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Browser automation
chromiumoxide = { version = "0.5", features = ["tokio-runtime"] }
futures = "0.3"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Environment variables
dotenv = "0.15"

# MCP protocol support - using official SDK
# mcp = "0.1"  # Will implement manually for now

# HTML parsing and content extraction
scraper = "0.20"
html5ever = "0.26"
readability = "0.3"

# CSS selector parsing
cssparser = "0.31"

# Base64 encoding
base64 = "0.21"

# Chrono for timestamps
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
# Testing framework
tokio-test = "0.4"

# HTTP client for testing (reuse main dependency)
reqwest = { version = "0.11", features = ["json"] }

# Integration test configuration
[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"
harness = true
